force-app/main/default/objects/User_Phone_Number__c/User_Phone_Number__c.object-meta.xml
<CustomObject>
    <description>Voice - WCSA - Company Level Accounts - Child of User - Contact Phone Numbers</description>
    <label>User: Phone Number</label>
    <nameField>
        <displayFormat>CUPN-{00000000}</displayFormat>
        <label>User: Phone Number Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User: Phone Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>