force-app/main/default/objects/User_Phone_Number__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <description>Voice - WCSA - User - Phone Number - Extension</description>
    <inlineHelpText>Voice - WCSA - User - Phone Number - Extension</inlineHelpText>
    <label>Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>