force-app/main/default/objects/User_Phone_Number__c/fields/Phone_For_Matching__c.field-meta.xml
<CustomField>
    <fullName>Phone_For_Matching__c</fullName>
    <description>Voice - WCSA - User Phone Number to Match for Duplicates / Epdates</description>
    <inlineHelpText>Voice - WCSA - User Phone Number to Match for Duplicates / Epdates</inlineHelpText>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>