force-app/main/default/objects/User_Phone_Number__c/fields/Phone_For_Matching_c__c.field-meta.xml
<CustomField>
    <fullName>Phone_For_Matching_c__c</fullName>
    <description>Matching Field to prevent Duplicates</description>
    <externalId>true</externalId>
    <inlineHelpText>Matching Field to prevent Duplicates</inlineHelpText>
    <label>Phone_For_Matching__c</label>
    <length>40</length>
    <type>Text</type>
</CustomField>