force-app/main/default/objects/User_Phone_Number__c/fields/Phone_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Phone_Type_Description__c</fullName>
    <description>Voice - WCSA - User Phone Number Type</description>
    <inlineHelpText>Voice - WCSA - User Phone Number Type</inlineHelpText>
    <label>Phone Type Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>