force-app/main/default/objects/User_Phone_Number__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>Voice - WCSA - User which owns the Phone Number</description>
    <inlineHelpText>Voice - WCSA - User which owns the Phone Number</inlineHelpText>
    <label>User Key</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>User: Phone Numbers</relationshipLabel>
    <relationshipName>User_Phone_Numbers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>